fix: cobertura e avisos do SonarCloud (lombok.config p/ jacoco ignorar codigo gerado, ZoneId explicito, Stream.toList, teste do EmailNotificacaoAdapter)